@@ -749,8 +749,10 @@ const char e_lexobsolete1[]	= "line %d: `...` obsolete, use $(...)";
 const char e_lexobsolete2[]	= "line %d: -a obsolete, use -e";
 const char e_lexobsolete3[]	= "line %d: '=' obsolete, use '=='";
 const char e_lexobsolete4[]	= "line %d: [[ ... %s ... ]] obsolete, use ((... %s ...))";
-const char e_lexobsolete5[]	= "line %d: set %s obsolete";
+const char e_lexobsolete5[]	= "line %d: 'set %s' obsolete";
 const char e_lexobsolete6[]	= "line %d: `{' instead of `in' is obsolete";
+const char e_lexobsolete7[]	= "line %d: 'set %s %s' is obsolete";
+const char e_lexobsolete8[]	= "line %d: 'alias %s' is obsolete";
 const char e_lexusebrace[]	= "line %d: use braces to avoid ambiguities with $id[...]";
 const char e_lexescape[]	= "line %d: escape %c to avoid ambiguities";
 const char e_lexquote[]		= "line %d: quote %c to avoid ambiguities";
