@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2025 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2026 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -55,6 +55,7 @@
 #define SYSSOURCE	(sh.bltin_cmds+21)	/* source */
 #define SYSRETURN	(sh.bltin_cmds+22)	/* return */
 #define SYSENUM		(sh.bltin_cmds+23)	/* enum */
+#define SYSALIAS	(sh.bltin_cmds+24)	/* alias */
 
 /* entry point for shell special builtins */
 
